@@ -29,6 +29,12 @@ RELEASE NOTES
     extra arguments required by a closure. This overly restrictive rule
     prevented the definition of useful and safe meta-predicates.
 
+    Moved all config files for no longer supported Prolog compilers to the
+    "configs/unsupported" folder.
+
+    Changed the default value of the compiler flags "altdirs" and "clean" to
+    "on" for all supported Prolog compilers.
+
     Added index/1 directives for the predicate lookup caching predicates to
     the SWI-Prolog integration files (see "integration/logtalk_comp_swi.pl").
     These directives may or may not improve performance, depending on your
